--- a/Project_1_Blog_Post/index.html
+++ b/Project_1_Blog_Post/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>My Simple Blog</title>
   </head>
   <body>
@@ -10,71 +11,81 @@
     <nav>
       <a href="">Home</a> | <a href="">About</a> | <a href="">Contact</a>
     </nav>
-    <hr />
-    <h3><b>My First Blog Post</b></h3>
-    <p>
-      This is the first paragraph of my blog post. I'm excited to share my
-      thoughts and experiences with you all. In this post, I will <br />
-      be talking about my day
-    </p>
-    <p>
-      Let's start with my morning. I woke up early and had a cup of coffee.
-      Then, I decided to go for a walk in the park. It was a <br />
-      beautiful sunny day, and the birds were singing. I saw many people walking
-      their dogs and children playing. It was very <br />
-      refreshing.
-    </p>
-    <img
-     width="370"
-      src="https://images.unsplash.com/photo-1561037404-61cd46aa615b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-      alt=""
-    />
-    <p>
-      Here is an image related to my walk in the park (imagine it's a picture of
-      a park!).
-    </p>
-    <h4><b>Things I saw in the park (List Example):</b></h4>
-    <ul>
-      <li>Beautiful flower</li>
-      <li>Squirrels running around</li>
-      <li>People doing yoga</li>
-      <li>A small pond with ducks</li>
-    </ul>
-    <hr />
-    <h3><b>My Second Blog Post</b></h3>
-    <p>
-      In this post, I want to talk about my favorite foods! I really enjoy
-      trying different cuisines and exploring new flavors.
-    </p>
-    <p>Here are some of my top favourite foods:</p>
 
-    <ol>
-      <li>
-        <p>Pizza</p>
-        <ul>
-          <li>Pepperoni</li>
-          <li>Mushrooms</li>
-          <li>Onions</li>
-        </ul>
-      </li>
-      <li>
-        <p>Sushi</p>
-      </li>
-      <li>
-        <p>Pasta</p>
+    <div class="section">
+      <h2><b>My First Blog Post</b></h2>
+      <hr />
+      <p>
+        This is the first paragraph of my blog post. I'm excited to share my
+        thoughts and experiences with you all. In this post, I will <br />
+        be talking about my day
+      </p>
+      <p>
+        Let's start with my morning. I woke up early and had a cup of coffee.
+        Then, I decided to go for a walk in the park. It was a <br />
+        beautiful sunny day, and the birds were singing. I saw many people
+        walking their dogs and children playing. It was very <br />
+        refreshing.
+      </p>
+
+      <img
+        height="170"
+        src="https://images.unsplash.com/photo-1561037404-61cd46aa615b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt=""
+      />
+
+      <p>
+        Here is an image related to my walk in the park (imagine it's a picture
+        of a park!).
+      </p>
+      <h3><b>Things I saw in the park (List Example):</b></h3>
+      <ul>
+        <li>Beautiful flower</li>
+        <li>Squirrels running around</li>
+        <li>People doing yoga</li>
+        <li>A small pond with ducks</li>
+      </ul>
+      <hr />
+    </div>
+    <div class="section">
+      <h2><b>My Second Blog Post</b></h2>
+      <hr />
+      <p>
+        In this post, I want to talk about my favorite foods! I really enjoy
+        trying different cuisines and exploring new flavors.
+      </p>
+      <p>Here are some of my top favourite foods:</p>
+      <b>
         <ol>
-          <li>Spaghetti</li>
-          <li>Penne</li>
-          <li>Fettuccine</li>
+          <li>
+            <p>Pizza</p>
+            <ul>
+              <li>Pepperoni</li>
+              <li>Mushrooms</li>
+              <li>Onions</li>
+            </ul>
+          </li>
+          <li>
+            <p>Sushi</p>
+          </li>
+          <li>
+            <p>Pasta</p>
+            <ol>
+              <li>Spaghetti</li>
+              <li>Penne</li>
+              <li>Fettuccine</li>
+            </ol>
+          </li>
         </ol>
-      </li>
-    </ol>
-
-    <p>These are just a few of my favorites. What are yours?</p>
-    <br />
-    <br />
-    <p>That's all for this post! Thanks for reading!</p>
-    <hr />
-    <p>&copy; 2023 My Simple Blog. All rights reserved.</p>
+      </b>
+      <p>These are just a few of my favorites. What are yours?</p>
+      <br />
+      <br />
+      <p>That's all for this post! Thanks for reading!</p>
+      <hr />
+    </div>
+    <div class="footer">
+      <p>&copy; 2023 My Simple Blog. All rights reserved.</p>
+    </div>
   </body>
 </html>
