--- a/Project_2_Contact_Page/index.html
+++ b/Project_2_Contact_Page/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="box">
     <h1>Contact Us</h1>
     <form>
-        <label for="a">Name:</label>
-        <input id="a" type="text"> <br> <br>
-        <label for="b">Email:</label>
-        <input id="b" type="email"> <br> <br>
-        <label for="c">Phone Number:</label>
-        <input id="c" type="tel"> <br> <br>
-        <label for="d">Message:</label> <br> <br>
-        <textarea name="" id="d"></textarea> <br> <br>
-        <input type="Submit">
+        <label for="a">Name</label>
+        <input id="a" type="text" placeholder="Enter Name"> 
+        <label for="b">Email</label>
+        <input id="b" type="email" placeholder="Enter Email"> 
+        <label for="c">Phone Number</label>
+        <input id="c" type="tel" placeholder="Enter Phone Number"> 
+        <label for="d">Message</label>
+        <textarea name="" id="d" placeholder="Enter Your Text"></textarea>
+        <button>Submit Message</button>
     </form>
+</div>
 </body>
 </html>
